<resources>
    <string name="app_name">BuyGames</string>
    <string name="news">tab1</string>
    <string name="tab1">News</string>
    <string name="tab2">Acquista</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="defaults">abcde</string>
    <string name="game_picture">game_picture</string>
    <string name="Games">Games</string>
    <string name="news_default">Qui compariranno le news</string>
    <string name="impostazioni">Qui compariranno le impostazioni</string>
    <string name="imp">Impostazioni</string>
    <string name="new_insert">Qui ci sarà la schermata per inserire i nuovi giochi</string>
    <string name="login">Login</string>
    <string name="Username">Username</string>
    <string name="Autologin">Accesso automatico</string>
    <string name="Password">Password</string>
    <string name="newaccount">Nuovo account</string>
    <string name="Logout">Logout</string>
    <string name="reserved">Area Personale</string>
    <string name="check1">Ps4</string>
    <string name="check2">Xbox</string>
    <string name="Check3">Nintendo</string>
    <string name="delete">Elimina</string>
    <string name="Delete">Elimina</string>
    <string name="modify">Modifica</string>
    <string name="AlertMessage">Sei sicuro di voler cancellare questo gioco?</string>
    <string name="PositiveButton">Si</string>
    <string name="NegativeButton">No</string>
    <string name="cell">Cellulare</string>
    <string name="email">E-mail</string>
    <string name="Nome">Nome</string>
    <string name="UserName">Nome</string>
    <string name="accedi">accedi</string>
    <string name="Search">Cosa stai cercando ?</string>
    <string name="crea">Crea</string>
    <string name="imgb">imgb</string>
    <string name="Inserisci">Inserisci foto: (max3)</string>
    <string name="prezzo">Prezzo</string>
    <string name="luogo">Luogo</string>

</resources>
