<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
>

    <EditText
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/email"
            android:hint="@string/Username"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:inputType="textShortMessage|textPersonName|text|textPassword|textEmailAddress"
            android:ems="10"
            android:id="@+id/password"
            android:hint="@string/Password"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/email"/>
    <CheckBox
            android:text="@string/Autologin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/chkAutoLogin"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"/>
    <Button
            android:text="@string/accedi"
            android:layout_width="222dp"
            android:layout_height="0dp"
            android:id="@+id/btnConferma"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/chkAutoLogin"
            android:backgroundTint="@color/ActionBarIniziale" android:textColor="@color/bottomNav"/>
    <Button
            android:text="@string/newaccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/newaccountbtn" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintBaseline_toBaselineOf="@id/chkAutoLogin"
            app:layout_constraintStart_toEndOf="@+id/chkAutoLogin" android:layout_marginStart="24dp"
            android:textColor="@color/bottomNav" android:backgroundTint="@color/ActionBarIniziale"/>
</android.support.constraint.ConstraintLayout>