<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
>

    <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/Password"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/UserPhone"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/email"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/textView3" android:layout_marginStart="60dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage|textPersonName|text|textPassword|textEmailAddress"
            android:ems="10"
            android:id="@+id/password"
            app:layout_constraintBaseline_toBaselineOf="@id/textView4"
            app:layout_constraintStart_toEndOf="@+id/textView4" android:layout_marginStart="36dp"/>
    <Button
            android:text="@android:string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAnnulla"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/btnConferma"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintVertical_bias="0.436"/>
    <Button
            android:text="@android:string/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnConferma" app:layout_constraintStart_toEndOf="@+id/btnAnnulla"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/btnAnnulla"
            app:layout_constraintBaseline_toBaselineOf="@id/btnAnnulla"/>
    <TextView
            android:text="@string/UserName"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/UserName" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/nome"
            app:layout_constraintBaseline_toBaselineOf="@id/UserName" app:layout_constraintStart_toEndOf="@+id/UserName"
            android:layout_marginStart="60dp"/>
    <TextView
            android:text="@string/cell"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/UserPhone" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/UserName"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/cellulare"
            app:layout_constraintBaseline_toBaselineOf="@id/UserPhone"
            app:layout_constraintStart_toEndOf="@+id/UserPhone" android:layout_marginStart="44dp"/>

</android.support.constraint.ConstraintLayout>